application-service/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
spec:
  rules:
    - host: app1.local
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 8081
